infrastructure/system/longhorn/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.services.sbling.net`)
      kind: Rule
      middlewares:
        - name: oidc-middleware
          namespace: longhorn-system
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: longhorn-services-sbling-net-prod-cert
